# spco2_boo

./: README.md
rgiro_openslam_gmapping/: CMakeLists.txt  README.md  package.xml
rgiro_openslam_gmapping/gridfastslam/: gridslamprocessor.cpp
rgiro_slam_gmapping/: README.md
rgiro_slam_gmapping/gmapping/: CMakeLists.txt  package.xml
rgiro_slam_gmapping/gmapping/src/: slam_gmapping.cpp
rgiro_slam_gmapping/slam_gmapping/: CMakeLists.txt  package.xml
rgiro_spco2_slam/: .gitignore  CMakeLists.txt  README.md  package.xml
rgiro_spco2_slam/bash/: reset-spco2-slam-output.bash
rgiro_spco2_slam/launch/: spco2_slam.launch  spco2_word.launch  turtlebot3_teleop_key.launch
rgiro_spco2_slam/src/: __init__.py  spco2_automatic_learn_concepts.py  spco2_image_features.py  spco2_image_features_offline.py  spco2_learn_concepts.py  spco2_learn_concepts_non_gmapping.py  spco2_map_saver.py  spco2_math.py  spco2_object_features.py  spco2_object_features_non_information.py  spco2_object_features_offline.py  spco2_objects_feature.py  spco2_placescnn.py  spco2_visualizer.py  spco2_word_data.py  spco2_word_features.py  trial.py
rgiro_spco2_slam/srv/: spco_data_image.srv  spco_data_object.srv
rgiro_spco2_visualization/: README.md
rgiro_spco2_visualization/rgiro_spco2_visualization/: CMakeLists.txt  package.xml
rgiro_spco2_visualization/rgiro_spco2_visualization/include/: gaussian_distribution.h
rgiro_spco2_visualization/rgiro_spco2_visualization/include/modules/: animation.h
rgiro_spco2_visualization/rgiro_spco2_visualization/launch/: gaussian_distribution.launch
rgiro_spco2_visualization/rgiro_spco2_visualization/src/: __init__.py  color.csv  gaussian_distribution.cpp  gaussian_distribution_chatter.py  gaussian_distribution_node.cpp
rgiro_spco2_visualization/rgiro_spco2_visualization/src/modules/: animation.cpp
rgiro_spco2_visualization/rgiro_spco2_visualization_msgs/: CMakeLists.txt  package.xml
rgiro_spco2_visualization/rgiro_spco2_visualization_msgs/msg/: GaussianDistribution.msg  GaussianDistributions.msg
rgiro_spco2_visualization/rgiro_spco2_visualization_msgs/srv/: GaussianService.srv
