<?xml version="1.0" ?>

<package format="2">
  <name>rgiro_spco2_visualization_msgs</name>
  <version>1.0.0</version>
  <description>The 'rgiro_spco2_visualization_msgs' package provides the messages for visualization of Spatial Concepts in Rviz.</description>

  <maintainer email="nakashima.takeshi@em.ci.ritsumei.ac.jp">Takeshi Nakashima</maintainer>
  <license>MIT</license>
  <url type="website">https://gitlab.com/emlab/RULO</url>
  <author email="kanechika.akinori@em.ci.ritsumei.ac.jp">Akinori Kanechika</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
